[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/COVID VIRUS.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 72
extra_spacing_bottom = 50
font_data = ExtResource( 2 )

[node name="Options" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1268.0
margin_bottom = 668.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1268.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 131.0
margin_right = 1268.0
margin_bottom = 155.0
alignment = 1

[node name="MusicSetting" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 560.0
margin_right = 708.0
margin_bottom = 24.0
text = "Activer la musique"
[connection signal="ready" from="VBoxContainer/HBoxContainer/MusicSetting" to="." method="_on_CheckBox_ready"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/MusicSetting" to="." method="_on_CheckBox_toggled"]
