[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/COVID VIRUS.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 72
extra_spacing_bottom = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.352941, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1268.0
margin_bottom = 668.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1268.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 1268.0
margin_bottom = 171.0
alignment = 1

[node name="MusicSetting" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 534.0
margin_right = 734.0
margin_bottom = 40.0
text = "Activer la musique"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 1268.0
margin_bottom = 215.0
alignment = 1

[node name="CountdownSetting" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 429.0
margin_right = 839.0
margin_bottom = 40.0
text = "Afficher un compte à rebours à la sortie du magasin"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 219.0
margin_right = 1268.0
margin_bottom = 243.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 412.0
margin_top = 5.0
margin_right = 777.0
margin_bottom = 19.0
text = "Score minimum avant que le compte à rebours s'affiche :"

[node name="CountdownDuration" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 781.0
margin_right = 855.0
margin_bottom = 24.0
max_value = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 247.0
margin_right = 1268.0
margin_bottom = 618.0
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 622.0
margin_right = 1268.0
margin_bottom = 668.0
alignment = 1

[node name="BackBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 522.0
margin_right = 746.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 0.486275, 0.486275, 0.486275, 1 )
text = "Enregistrer"
flat = true
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/MusicSetting" to="." method="_on_MusicSetting_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer3/CountdownSetting" to="." method="_on_CountdownSetting_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer4/CountdownDuration" to="." method="_on_CountdownDuration_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/BackBtn" to="." method="_on_BackBtn_pressed"]
